public/css/page_css/page_main.css
body {
    background-color: var(--bg_color);
}

.main_box {
    display: flex;
    padding: 40px;
    gap: 20px;
    height: auto;
}

.tools_bar {
    border: 2px solid #6C3287;
    width: 200px;
    height: 750px;
    border-radius: 30px;
    box-shadow: 5px 5px #6C3287;
    position: relative;
    overflow-y: auto;
}

.tools_list {
    margin-top: 50px;
    padding: 15px;
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.tool_option {
    border-radius: 15px;
    width: 100%;
    background-color: var(--input_bg_color);
    border: 3px solid transparent;
    color: var(--input_color);
    margin-bottom: 30%;
    box-sizing: border-box;
}

.tool_option:hover {
    border-color: #6C3287;
    outline: none;
}

.tool_option:focus {
    background-color: #6C3287;
    color: #fafafa;
}

.home_space {
    padding: 15px;
    position: absolute;
    bottom: 10px;
}

.home_button {
    border-radius: 15px;
    background-color: var(--bg_color);
    border: 3px solid transparent;
    color: var(--input_color);
}

.home_button:hover {
    border-color: #6C3287;
    outline: none;
}

.text_content{
    width: 100%;
    border: none;
    width: 100%;
    background-color: var(--input_bg_color);
    color: var(--input_color);    
    box-sizing: border-box;
    min-height:px; /* Altura mínima para o conteúdo */
   
}

#editor{
    width: 90%;
}

article{
    min-width: 900px !important;
}

.ck-editor__main{
    width: 100%;
}

.ck-content{
    max-height: 680px;
}

.canva_tool {
    border: 2px solid #6C3287;
    color: var(--input_color);
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    padding: 10px;
    gap: 5px;
}

.button_canva {
    background-color: var(--input_bg_color);
    color: var(--input_color);
    border: 2px solid #6C3287;
    width: 100px;
}

.canvas_cell {
    height: 100%;
}

.myCanvas {
    background-color: #f6f7fa;
    border: 2px solid #6C3287;
    border-radius: 20px;
    width: 100%;
    box-sizing: border-box;
}

.grid_content {
    display: flex;
    justify-content: center;
    width: 100%;
    min-height: 750px;
    height: 100%;
    gap: 30px;  
    flex-wrap: wrap;
    height: auto;
}

.grid_cell {
    border: 2px solid #6C3287;
    border-radius: 30px;
    display: flex;
    flex-direction: column;
    padding: 10px;
    gap: 5px;
    color: var(--input_color);
    position: relative;
    box-sizing: border-box;
    width: 45%;    
    min-height: 750px;
    min-width: 700px;
    max-height: 750px;
}

/* Modal styles */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: var(--input_bg_color);
}

.modal-content {
    background-color: var(--input_bg_color);
    margin: 15% auto;
    padding: 20px;
    border: 2px solid #6C3287;
    width: 20%;
    color: var(--input_color);
}

.close {
    color: #6C3287;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.add_option {
    border-radius: 15px;
    width: 100%;
    background-color: var(--input_bg_color);
    border: 3px solid transparent;
    color: var(--input_color);
    box-sizing: border-box;
}

.add_option:hover {
    border-color: #6C3287;
    outline: none;
}

.add_option:focus {
    background-color: #6C3287;
    color: #fafafa;
}

.name_input {
    background-color: var(--input_bg_color);
    color: var(--input_color);
}

